# fabro

./: .env.example  Cargo.toml  ITEM2-ADDENDUM.md  README.md  docker-compose.split-web.yaml  docker-compose.tailscale.yaml  graph.fabro  kiwi-waived  run.json  status.json
card-game-app/: README.md  game.py  main.py  pyproject.toml  test_game.py  ui.py
card-game-app/src/card_game_tui/: __init__.py  domain.py  engine.py  game.py  render.py  tui.py  ui.py
card-game-app/tests/: __init__.py  test_card.py  test_domain.py  test_game.py  test_integration.py  test_render.py  test_rules.py  test_state.py  test_tui.py
lib/crates/fabro-acp/: Cargo.toml
lib/crates/fabro-acp/src/: command.rs  lib.rs  test_support.rs  transport.rs
lib/crates/fabro-acp/tests/: session.rs
lib/crates/fabro-agent/: Cargo.toml
lib/crates/fabro-agent/src/: cli.rs  history.rs  mcp_integration.rs  sandbox.rs  session.rs
lib/crates/fabro-agent/tests/it/: compaction.rs  main.rs
lib/crates/fabro-automation/: Cargo.toml
lib/crates/fabro-automation/src/: error.rs  id.rs  lib.rs  model.rs  store.rs
lib/crates/fabro-cli/: Cargo.toml
lib/crates/fabro-cli/src/: args.rs  command_context.rs  main.rs
lib/crates/fabro-cli/src/commands/: exec.rs  install.rs
lib/crates/fabro-cli/src/shared/: github.rs  provider_auth.rs
lib/crates/fabro-db/: Cargo.toml
lib/crates/fabro-db/migrations/: 2026063001_variables.sql  2026063002_environments.sql  2026071001_environments_forkd.sql
lib/crates/fabro-db/src/: lib.rs
lib/crates/fabro-db/tests/: sqlite.rs
lib/crates/fabro-dev/: Cargo.toml
lib/crates/fabro-dev/src/commands/: docker_build.rs  docs_options_reference.rs  mod.rs
lib/crates/fabro-environment/: Cargo.toml
lib/crates/fabro-environment/src/: error.rs  lib.rs  model.rs  store.rs
lib/crates/fabro-environment/tests/: store.rs
lib/crates/fabro-hooks/: Cargo.toml
lib/crates/fabro-hooks/src/: config.rs  executor.rs  lib.rs
lib/crates/fabro-hooks/tests/: host_command_hooks.rs
lib/crates/fabro-install/: Cargo.toml
lib/crates/fabro-install/src/: lib.rs
lib/crates/fabro-mcp-server/: Cargo.toml
lib/crates/fabro-mcp-server/src/: config.rs  lib.rs  run_tools.rs  server.rs
lib/crates/fabro-mcp-server/src/run_tools/: interact.rs  search.rs
lib/crates/fabro-mcp-store/: Cargo.toml
lib/crates/fabro-mcp-store/src/: error.rs  lib.rs  model.rs  store.rs
lib/crates/fabro-referee/: CANARY-RUNBOOK.md  Cargo.toml
lib/crates/fabro-referee/scripts/: LIVE-WIRING-HANDOFF.md  join_proof.py  referee-activate-live.sh  referee-score-dispatch.sh
lib/crates/fabro-referee/src/: canary.rs  decision_log.rs  emit.rs  gate.rs  lib.rs  main.rs  runner.rs  types.rs
lib/crates/fabro-referee/src/gate/: backend.rs  test_support.rs
lib/crates/fabro-referee/testdata/: item2-autodetect-basefix-evidence.md  item2-crash-test-evidence.md  item2-synthetic-proof.jsonl
lib/crates/fabro-referee/tests/: live_forkd_smoke.rs  runrow_schema_parity.rs
lib/crates/fabro-referee/tests/fixtures/: runrow_v1_minimal.jsonl  runrow_v2_full.jsonl  wrapper_decision_one_line.jsonl
lib/crates/fabro-sandbox/: Cargo.toml
lib/crates/fabro-sandbox/src/: config.rs  details.rs  docker.rs  from_environment.rs  glob_match.rs  lib.rs  local.rs  provider.rs  reconnect.rs  sandbox.rs  sandbox_spec.rs  terminal.rs  test_support.rs
lib/crates/fabro-sandbox/src/daytona/: mod.rs
lib/crates/fabro-sandbox/src/forkd/: mod.rs
lib/crates/fabro-sandbox/src/provider/: docker.rs  forkd.rs
lib/crates/fabro-sandbox/tests/: daytona_streaming_live.rs  docker_streaming.rs
lib/crates/fabro-server/: Cargo.toml
lib/crates/fabro-server/migrations/: 2026052501_optional_server_env_secrets_to_vault.rs
lib/crates/fabro-server/src/: automation_materializer.rs  diagnostics.rs  git_checkout.rs  install.rs  lib.rs  manifest_validation.rs  migrations.rs  principal_middleware.rs  run_files.rs  run_manifest.rs  security_headers.rs  serve.rs  server.rs  startup.rs  static_files.rs  test_support.rs  web_auth.rs  worker_runtime.rs
lib/crates/fabro-server/src/auth/: cli_flow.rs
lib/crates/fabro-server/src/demo/: mod.rs
lib/crates/fabro-server/src/server/: automation_scheduler.rs  resource_sampler.rs  tests.rs
lib/crates/fabro-store/: Cargo.toml
lib/crates/fabro-store/src/: run_state.rs
lib/crates/fabro-store/src/slate/: mod.rs  run_store.rs
lib/crates/fabro-store/tests/: serializable_projection.rs
lib/crates/fabro-test/: Cargo.toml
lib/crates/fabro-test/src/: lib.rs
lib/crates/fabro-tool/: Cargo.toml
lib/crates/fabro-tool/src/: common.rs  create.rs  interact.rs  search.rs
lib/crates/fabro-types/: Cargo.toml
lib/crates/fabro-types/src/: dense.rs  lib.rs  mcp_store.rs  principal.rs  run.rs  run_projection.rs  run_summary.rs  sandbox_provider.rs  test_support.rs  worker_bootstrap.rs
lib/crates/fabro-types/src/run_event/: agent.rs  mod.rs  run.rs
lib/crates/fabro-types/src/settings/: cli.rs  duration.rs  interp.rs  mod.rs  run.rs  server.rs
lib/crates/fabro-types/tests/: run_event_serde.rs  run_spec_methods.rs  run_spec_serde.rs
lib/crates/fabro-util/: Cargo.toml
lib/crates/fabro-util/src/: lib.rs  shell.rs
lib/crates/fabro-variable/: Cargo.toml
lib/crates/fabro-variable/src/: lib.rs
lib/crates/fabro-variable/tests/: store.rs
lib/crates/fabro-workflow/: Cargo.toml
lib/crates/fabro-workflow/src/: billing_rollup.rs  file_resolver.rs  git.rs  run_lookup.rs  run_metadata.rs  run_options.rs  runtime_store.rs  sandbox_git.rs  test_support.rs
lib/crates/fabro-workflow/src/event/: convert.rs  events.rs  sink.rs  stored_fields.rs
lib/crates/fabro-workflow/src/handler/: agent.rs  command.rs  manager_loop.rs  parallel.rs  prompt.rs
lib/crates/fabro-workflow/src/lifecycle/: git.rs
lib/crates/fabro-workflow/src/operations/: archive.rs  create.rs  fork.rs  mod.rs  retry.rs  start.rs  timeline.rs  validate.rs
lib/crates/fabro-workflow/src/pipeline/: execute.rs  finalize.rs  initialize.rs  persist.rs  pull_request.rs  transform.rs  types.rs  validate.rs
lib/crates/fabro-workflow/src/transforms/: file_inlining.rs  import.rs  (+3 more)
(+622 files in other folders)
