[project]
name = "card-game-tui"
version = "0.1.0"
description = "A terminal-based FreeCell solitaire game in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["src"]
