[package]
name = "fabro-acp"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Agent Client Protocol backend support for Fabro"

[features]
default = ["runtime"]
runtime = [
  "dep:fabro-sandbox",
  "dep:fabro-types",
  "dep:futures",
  "dep:tokio",
  "dep:tokio-util",
  "dep:tracing",
]
test-support = []

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
agent-client-protocol.workspace = true
agent-client-protocol-tokio.workspace = true
fabro-sandbox = { path = "../fabro-sandbox", optional = true }
fabro-types = { path = "../fabro-types", optional = true }
fabro-util = { path = "../fabro-util" }
serde_json.workspace = true
shlex = "1"
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["compat", "io"], optional = true }
futures = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
fabro-sandbox = { path = "../fabro-sandbox", features = ["test-support"] }
tempfile = "3"
