[package]
name = "fabro-automation"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
croner = "3"
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
toml.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile = "3"
