[package]
name = "fabro-dev"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Internal development tooling for Fabro"

[lib]
name = "fabro_dev"

[[bin]]
name = "fabro-dev"
path = "src/main.rs"
required-features = ["dev"]

[[test]]
name = "it"
path = "tests/it/main.rs"
required-features = ["dev"]

[features]
default = []
dev = []

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
csv = "1"
fabro-config = { path = "../fabro-config" }
fabro-util = { path = "../fabro-util" }
fabro-options-metadata.workspace = true
quick-xml = "0.36"
toml_edit.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
