[package]
name = "fabro-referee"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Per-attempt, per-tier scorer — the fabro Referee plane of the AO Factory (P0 linchpin)"

[lib]
name = "fabro_referee"
doctest = false

[[bin]]
name = "fabro-referee"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
# Test-only: expose the in-process fake gate backend so integration
# tests can wire the runner without `ao` or `dellsrv`. NEVER enabled
# in production builds — see fabro CLAUDE.md "Test support boundaries".
test-support = []

[dependencies]
fabro-http = { path = "../fabro-http" }
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
clap = { workspace = true, features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
reqwest = { workspace = true, features = ["json", "rustls"] }
ulid.workspace = true
sha2 = "0.10"
regex = { version = "1", default-features = false }
