[package]
name = "fabro-test"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Test utilities for fabro integration tests"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
assert_cmd = "2"
axum = { workspace = true }
fabro-config = { path = "../fabro-config" }
fabro-install = { path = "../fabro-install" }
fabro-proc = { path = "../fabro-proc" }
fabro-static.workspace = true
fabro-types = { path = "../fabro-types" }
fabro-util = { path = "../fabro-util" }
fabro-http.workspace = true
insta = { workspace = true, features = ["filters"] }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
toml = { workspace = true }
twin-openai = { workspace = true }
twin-github = { workspace = true }
