[package]
name = "fabro-tool"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Shared Fabro run-control tool behavior"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
fabro-api = { path = "../fabro-api" }
fabro-client = { path = "../fabro-client" }
fabro-types = { path = "../fabro-types" }
fabro-util = { path = "../fabro-util" }
futures.workspace = true
schemars = "1.2.1"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
fabro-types = { path = "../fabro-types", features = ["test-support"] }
tempfile = "3"
