[package]
name = "fabro-util"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Shared utilities for terminal output, paths, environment, and runtime helpers"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
console.workspace = true
fabro-static.workspace = true
rand.workspace = true
shlex = "1"
termimad.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
open = "5"

[dev-dependencies]
insta = { workspace = true }
tempfile = "3"
