[package]
name = "fabro-variable"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Workflow-visible non-sensitive variables for Fabro"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
chrono.workspace = true
fabro-types = { path = "../fabro-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile = "3"
